src/objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>vlocity_ins__CampaignContentDocumentId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the primary document (or other content) that is the subject of the campaign. Could be content being promoted in the campaign or a script to be used when talking to campaign targets. Points to the child Campaign Content Document (CampaignContentDocument__c) record that associates a Salesforce File with a Campaign.</description>
        <label>Campaign Content Document</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>vlocity_ins__CampaignContentDocument__c.vlocity_ins__CampaignId__c</field>
                <operation>equals</operation>
                <valueField>$Source.Id</valueField>
            </filterItems>
            <filterItems>
                <field>vlocity_ins__CampaignContentDocument__c.vlocity_ins__IsPrimary__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>vlocity_ins__CampaignContentDocument__c</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ContentDocumentTitle__c</fullName>
        <description>Formula: Title as defined on the campaign content document association record.</description>
        <formula>vlocity_ins__CampaignContentDocumentId__r.vlocity_ins__ContentTitle__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Content Document Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EmailTemplate__c</fullName>
        <description>Name of the email template to send to campaign members. Matches the Template Unique Name (DeveloperName) of a Salesforce Email Template (EmailTemplate object).</description>
        <inlineHelpText>Email template used to send email to campaign member.</inlineHelpText>
        <label>Email Template</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__FollowUpTo__c</fullName>
        <description>Identifies the type of object that should be created when a user creates a &quot;follow up&quot; item for this campaign. Values must be one of “Log Call”, “Case”, “Event”, “Opportunity”, “Task”, “Order”.</description>
        <label>Follow Up To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__LineOfBusiness__c</fullName>
        <label>Line of Business</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Group Dental</fullName>
                </value>
                <value>
                    <fullName>Group Medical</fullName>
                </value>
                <value>
                    <fullName>Group Vision</fullName>
                </value>
                <value>
                    <fullName>Individual Dental</fullName>
                </value>
                <value>
                    <fullName>Individual Medical</fullName>
                </value>
                <value>
                    <fullName>Individual Vision</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__MassEmailContent__c</fullName>
        <label>Email Content</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__MassEmailSubject__c</fullName>
        <label>Email Subject</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProcessLanguage__c</fullName>
        <defaultValue>&apos;English&apos;</defaultValue>
        <description>Used to associate a Vlocity OmniScript to run when executing the campaign for each target. Process Language specifies the Language value of the OmniScript.</description>
        <label>Process Language</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProcessPrefillBundle__c</fullName>
        <description>Used when executing the campaign for each target via a Vlocity OmniScript. The Process Prefill Bundle specifies the prefill DataRaptor mapping bundle to use when launching the OmniScript.</description>
        <label>Process Prefill Bundle</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProcessSubType__c</fullName>
        <defaultValue>&apos;Default&apos;</defaultValue>
        <description>Used to associate a Vlocity OmniScript to run when executing the campaign for each target. Process Sub Type specifies the Sub Type value of the OmniScript.</description>
        <label>Process Sub Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProcessType__c</fullName>
        <defaultValue>&apos;Campaign&apos;</defaultValue>
        <description>Used to associate a Vlocity OmniScript to run when executing the campaign for each target. Process Type specifies the Type value of the OmniScript.</description>
        <label>Process Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Campaigns</label>
    </listViews>
    <listViews>
        <fullName>MyActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Active Campaigns</label>
    </listViews>
    <recordTypes>
        <fullName>AgencyBrokerage</fullName>
        <active>true</active>
        <label>Agency/Brokerage</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_ins__MobilePhoneCampaign</fullName>
        <active>true</active>
        <description>Mobile Phone Campaign</description>
        <label>MobilePhoneCampaign</label>
    </recordTypes>
    <sharingModel>FullAccess</sharingModel>
</CustomObject>